Fix logo distortion on safari

--- a/_sass/new/nav.scss
+++ b/_sass/new/nav.scss
@@ -29,6 +29,7 @@ nav a div{
 }
 
 nav div img{
+    height: 1.5em;
     width: 2.5rem;
     padding-right: 1rem;
     margin-top: -3px;
